--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,39 @@ body {
     margin: 0;
     padding: 0;
     position: absolute;
+    width: 100%;
 }
 
+body .body__showModalBtn{
+    background-color: green;
+    border: 0;
+    color: seashell;
+    display: block;
+    position: relative;
+    top: 10rem;
+    padding: .5em;
+    width: 100%;
 
+}
 
 .body__modalContainer{
+    display: none;
     position: fixed;
     width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
     z-index: 2;
+    
+
+}   
+
+
+
+.body__modalContainer--active{
+    display: flex;
     
 
 }   
@@ -40,13 +59,19 @@ header{
 
 }
 
+.modal__header #closeModal:hover{
+    cursor: pointer;
+
+}
+
 .body__modalContainer .modalContainer__modal{
     background-color: #fff;
     padding: 1rem;
-    position: relative;
+    position: absolute;
     left: 20rem;
-    top: 5rem;
+    top: 3rem;
     width: 50%;
+  
 }
 
 .modal__main .modal__Paragraph{
